@@ -2,6 +2,7 @@ PZS-NG CHANGELOG
 ----------------
 
 v1.0.6  --> 1.0.X  :
+		- updated libcopy to v1.2 - fix for openbsd4.0.
 		- added support for not sorting audio in certain dirs.
 		- New option in zsconfig.h - audio_nosort_dirs - list of dirs where no
 		  audiosorting should take place.
